0.2.8

- Changed logo/validation images
- Introduced snipsnap-copyright snip for page bottom
- Changed semantics of {image} macro, expect images as image-name-id
- Added Feature: import/export from web interface
- Fixed bug: list detection
- Changed macro interface: User Writer instead of StringBuffer and Refactoring
  "Introduce Parameter Object"
- Added Feature: {image} tag allows positioned and floating images
- Added snipsnap-help to default snips (contains text formatting)
- Introduced: {list-of-macros}
- Replaced {snips-by-recent} by {recent-changes} macro
- Defaults snips are now loaded from conf/snipsnap.snip
- Added Feature: bullet, square, numerated (numbers, alpha, greek, japanese)
- Changed feature: Post blog prepends to the post
- Fixed bug: SnipSnap now uses <dc:title> in RSS and DC.Title in HTML
- Added Feature: Introduced portlet snip snipsnap-portlet-<number>
- Added Feature: VerticalListFormatter introduced
- Added Feature: {logins} macro
- Added Feature: {calendar} macro
- Changed <s:snip> JSTL tag
- Switched to DIV from TABLE layout
- Worked on Accessibility

0.2.7

- Fixed bug: Editing users failed when email field was empty
- Fixed bug: wrong manifest for snipsnap.jar
- Added feature: a installed blog pings to SnipSnap.org and is featured on SnipSnap.org
- Added feature: ping blog.gs with extendedPing
- Added feature: weblogs.ping is now asynchron, so posting is faster with the ping on
- Fixed bug: weblogs.ping now works and is default on (can be turned of in the configuration)
- Added feature: Detect search engine bots (Googlebot, Fast Webcrawler)
- Switched to RSS 2.0 by default
- Added feature: {version} macro displays SnipSnap version.
- Added feature: Added description to RSS, remove HTML from snip content
- Fixed bug: AdminServer did not receive shutdown command
- Fixed bug: application dirs must not contain space (replaced by _ now)
- Fixed smaller bugs

0.2.6

- Added feature: Dublin Core support